# C-Chatbot

./: README.md
logic-engine/backend/: CMakeLists.txt
logic-engine/backend/include/: formula.h  inference_engine.h  parser.h
logic-engine/backend/src/: formula.cpp  inference_engine.cpp  parser.cpp  server.cpp
logic-engine/frontend/: index.html
